# step-urdf-maker

./: .gitignore  README.md  STEP_URDF_Maker.bat  environment.yml  pyproject.toml  requirements-build.txt  requirements.txt  run.ps1  setup.ps1
.github/workflows/: portable-release.yml
data/: wsr-0002898_simplified_extended_2025-11-23.urdfmaker.json
docs/: SETTING_MANUAL.md
packaging/: build_portable.py  step_urdf_maker.spec
tests/: test_collision.py  test_main_window_manual_tree.py  test_mechanism_wizard.py  test_model.py  test_project_io.py  test_runtime_env.py  test_step_loader.py  test_step_subprocess.py  test_ui_editors.py  test_urdf_io.py  test_viewport.py
urdf_maker/: __init__.py  __main__.py  app.py  collision.py  model.py  project_io.py  runtime_env.py  runtime_log.py  step_loader.py  step_subprocess.py  urdf_io.py
urdf_maker/ui/: __init__.py  editors.py  main_window.py  viewport.py  wizards.py
