[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "step-urdf-maker"
version = "0.1.7"
description = "Interactive STEP/URDF link and joint editor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "PySide6>=6.10,<6.12",
  "vtk==9.6.2",
  "cadquery-ocp-novtk==7.9.3.1.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
urdf-maker = "urdf_maker.app:main"

[tool.setuptools.packages.find]
include = ["urdf_maker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
